updated images and text

--- a/discover.html
+++ b/discover.html
@@ -10,14 +10,14 @@
 		<header class="header">
 			<a class="logo" href="index.html">Taniti</a>
 			<div class="nav-links">
-				<li><a href="#">Discover Taniti</a></li>
-				<li><a href="#">Plan Your Trip</a></li>
-				<li><a href="#">Contact Us</a></li>
+				<li><a href="discover.html">Discover Taniti</a></li>
+				<li><a href="plantrip.html">Plan Your Trip</a></li>
+				<li><a href="contact.html">Contact Us</a></li>
 			</div>
 
 			<div class="search-bar">
 				<div class="nav-links">
-					<a href="#faq-section">FAQs</a>
+					<a href="index.html#faq-section">FAQs</a>
 				</div>
 				<input type="search" placeholder="Search..." />
 			</div>
@@ -29,10 +29,10 @@
 			</div>
 			<div id="myModal" class="modal">
 				<div class="modal-content">
-					<li><a href="#">Home</a></li>
-					<li><a href="#">Discover Taniti</a></li>
-					<li><a href="#">Plan Your Trip</a></li>
-					<li><a href="#">Contact Us</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="discover.html">Discover Taniti</a></li>
+					<li><a href="plantrip.html">Plan Your Trip</a></li>
+					<li><a href="contact.html">Contact Us</a></li>
 					<a class="close" onclick="toggleModal(false)">&#10539;</a>
 				</div>
 			</div>
@@ -41,14 +41,14 @@
 			<!-- Hero -->
 			<section>
 				<div class="text-card">
-					<h2 class="text-card-title">Welcome to Taniti</h2>
+					<h2 class="text-card-title">Explore Taniti</h2>
 					<p class="text-card-text">
-						Taniti is a small, tropical island in the Pacific. While the island has an
-						area of less than 500 square miles, the terrain is varied and includes both
-						sandy and rocky beaches, a small but safe harbor, lush tropical rainforests,
-						and a mountainous interior that includes a small, active volcano. Taniti has
-						an indigenous population of about 20,000. Until a recent increase in
-						tourism, most the Tanitian economy was dominated by fishing or agriculture.
+						Experience the essence of Taniti with our rich culinary delights,
+						comfortable and inviting accommodations, convenient transportation, and
+						vibrant festivals. Explore the island's breathtaking natural beauty through
+						various sightseeing opportunities and discover unique local crafts and
+						treasures in our bustling shopping districts. Taniti offers a perfect blend
+						of relaxation, adventure, and cultural immersion for every traveler.
 					</p>
 				</div>
 			</section>
@@ -58,45 +58,63 @@
 				<section class="activities-grid">
 					<!--  -->
 					<div class="activity-card">
-						<img src="./images/test1.jpg" alt="Activity Image" />
-						<h3>LATEST EVENTS</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-						<a href="#" class="card-link">Join the Party</a>
+						<img src="./images/islandFood.jpg" alt="Island Food" />
+						<h3>Island Food</h3>
+						<p>
+							Savor the flavors of Taniti with local dishes that blend tropical
+							ingredients and culinary traditions for an unforgettable taste
+							experience
+						</p>
+						<!-- <a href="#" class="card-link">Join the Party</a> -->
 					</div>
 					<!--  -->
 					<div class="activity-card">
-						<img src="./images/test1.jpg" alt="Activity Image" />
-						<h3>LATEST EVENTS</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-						<a href="#" class="card-link">Join the Party</a>
+						<img src="./images/lodging.jpg" alt="Island Hotel" />
+						<h3>Hotels & Lodging</h3>
+						<p>
+							Relax in comfort with Taniti's accommodations, from beachfront resorts
+							to cozy inns, all offering warm island hospitality.
+						</p>
+						<!-- <a href="#" class="card-link">Join the Party</a> -->
 					</div>
 					<!--  -->
 					<div class="activity-card">
-						<img src="./images/test1.jpg" alt="Activity Image" />
-						<h3>LATEST EVENTS</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-						<a href="#" class="card-link">Join the Party</a>
+						<img src="./images/transport.jpg" alt="Island Road" />
+						<h3>Transportation</h3>
+						<p>
+							Navigate Taniti with ease, thanks to a network of buses, taxis, and
+							rental services that connect you to every corner of the island.
+						</p>
 					</div>
 					<!--  -->
 					<div class="activity-card">
-						<img src="./images/test1.jpg" alt="Activity Image" />
-						<h3>LATEST EVENTS</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-						<a href="#" class="card-link">Join the Party</a>
+						<img src="./images/festival.jpg" alt="Island Festival" />
+						<h3>Festivals</h3>
+						<p>
+							Immerse yourself in Taniti's culture with vibrant festivals celebrating
+							music, dance, and the island's rich heritage throughout the year.
+						</p>
+						<!-- <a href="#" class="card-link">Join the Party</a> -->
 					</div>
 					<!--  -->
 					<div class="activity-card">
-						<img src="./images/test1.jpg" alt="Activity Image" />
-						<h3>LATEST EVENTS</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-						<a href="#" class="card-link">Join the Party</a>
+						<img src="./images/sightseeing.jpg" alt="Island View" />
+						<h3>Sightseeing</h3>
+						<p>
+							Discover Taniti's stunning landscapes, from lush rainforests and
+							waterfalls to the serene beauty of our sandy shores.
+						</p>
+						<!-- <a href="#" class="card-link">Join the Party</a> -->
 					</div>
 					<!--  -->
 					<div class="activity-card">
-						<img src="./images/test1.jpg" alt="Activity Image" />
-						<h3>LATEST EVENTS</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-						<a href="#" class="card-link">Join the Party</a>
+						<img src="./images/shopping.jpg" alt="Island Shopping" />
+						<h3>Shopping</h3>
+						<p>
+							Find the perfect souvenir in Taniti's bustling markets and boutiques,
+							featuring local handicrafts, art, and fashion.
+						</p>
+						<!-- <a href="#" class="card-link">Join the Party</a> -->
 					</div>
 					<!--  -->
 				</section>
