--- a/plantrip.html
+++ b/plantrip.html
@@ -10,9 +10,9 @@
 		<header class="header">
 			<a class="logo" href="index.html">Taniti</a>
 			<div class="nav-links">
-				<li><a href="#">Discover Taniti</a></li>
-				<li><a href="#">Plan Your Trip</a></li>
-				<li><a href="#">Contact Us</a></li>
+				<li><a href="discover.html">Discover Taniti</a></li>
+				<li><a href="plantrip.html">Plan Your Trip</a></li>
+				<li><a href="contact.html">Contact Us</a></li>
 			</div>
 
 			<div class="search-bar">
@@ -29,10 +29,10 @@
 			</div>
 			<div id="myModal" class="modal">
 				<div class="modal-content">
-					<li><a href="#">Home</a></li>
-					<li><a href="#">Discover Taniti</a></li>
-					<li><a href="#">Plan Your Trip</a></li>
-					<li><a href="#">Contact Us</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="discover.html">Discover Taniti</a></li>
+					<li><a href="plantrip.html">Plan Your Trip</a></li>
+					<li><a href="contact.html">Contact Us</a></li>
 					<a class="close" onclick="toggleModal(false)">&#10539;</a>
 				</div>
 			</div>
@@ -42,12 +42,12 @@
 				<div class="text-card">
 					<h2 class="text-card-title">Plan Your Trip to Taniti</h2>
 					<p class="text-card-text">
-						Taniti is a small, tropical island in the Pacific. While the island has an
-						area of less than 500 square miles, the terrain is varied and includes both
-						sandy and rocky beaches, a small but safe harbor, lush tropical rainforests,
-						and a mountainous interior that includes a small, active volcano. Taniti has
-						an indigenous population of about 20,000. Until a recent increase in
-						tourism, most the Tanitian economy was dominated by fishing or agriculture.
+						Planning your trip to Taniti is a breeze with our user-friendly booking
+						platform. Choose from a range of exquisite hotels, easily navigate through
+						transport options, and secure your spot at lively festivals. Arrange
+						sightseeing tours to explore natural wonders and indulge in shopping
+						excursions. Let us help you craft the perfect itinerary for an unforgettable
+						Tanitian adventure.
 					</p>
 				</div>
 			</section>
