--- a/contact.html
+++ b/contact.html
@@ -10,14 +10,14 @@
 		<header class="header">
 			<a class="logo" href="index.html">Taniti</a>
 			<div class="nav-links">
-				<li><a href="#">Discover Taniti</a></li>
-				<li><a href="#">Plan Your Trip</a></li>
-				<li><a href="#">Contact Us</a></li>
+				<li><a href="discover.html">Discover Taniti</a></li>
+				<li><a href="plantrip.html">Plan Your Trip</a></li>
+				<li><a href="contact.html">Contact Us</a></li>
 			</div>
 
 			<div class="search-bar">
 				<div class="nav-links">
-					<a href="#faq-section">FAQs</a>
+					<a href="index.html#faq-section">FAQs</a>
 				</div>
 				<input type="search" placeholder="Search..." />
 			</div>
@@ -29,16 +29,115 @@
 			</div>
 			<div id="myModal" class="modal">
 				<div class="modal-content">
-					<li><a href="#">Home</a></li>
-					<li><a href="#">Discover Taniti</a></li>
-					<li><a href="#">Plan Your Trip</a></li>
-					<li><a href="#">Contact Us</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="discover.html">Discover Taniti</a></li>
+					<li><a href="plantrip.html">Plan Your Trip</a></li>
+					<li><a href="contact.html">Contact Us</a></li>
 					<a class="close" onclick="toggleModal(false)">&#10539;</a>
 				</div>
 			</div>
 		</header>
-		<!-- Hero -->
-		<main></main>
+		<main>
+			<!-- Hero -->
+			<section>
+				<div class="text-card">
+					<h2 class="text-card-title">Contact Us</h2>
+					<p class="text-card-text">
+						For any inquiries or assistance with your travel plans to Taniti, our
+						dedicated team is just a form away. Reach out to us using this simple
+						contact form for swift and personalized support to ensure your trip is
+						hassle-free and filled with only the best experiences Taniti has to offer.
+					</p>
+				</div>
+			</section>
+			<!--  -->
+			<div class="contact-card">
+				<div class="contact-form-container">
+					<div class="contact-form-card">
+						<form class="trip-form">
+							<div class="date-inputs">
+								<input
+									type="text"
+									id="firstName"
+									name="firstName"
+									placeholder="First Name"
+									required
+								/>
+								<input
+									type="text"
+									id="lastName"
+									name="lastName"
+									placeholder="Last Name"
+									required
+								/>
+							</div>
+
+							<input
+								type="text"
+								id="email"
+								name="email"
+								placeholder="Email Address"
+								required
+							/>
+							<input
+								type="text"
+								id="confirmEmail"
+								name="confirmEmail"
+								placeholder="Confirm Email Address"
+								required
+							/>
+							<input
+								type="number"
+								id="phone"
+								name="phone"
+								placeholder="555-555-5555"
+								required
+							/>
+
+							<div class="payment-options">
+								<label
+									><input
+										type="radio"
+										name="payment-option"
+										value="home"
+										checked
+									/>Home</label
+								>
+								<label
+									><input
+										type="radio"
+										name="payment-option"
+										value="cell"
+									/>Cell</label
+								>
+								<label
+									><input
+										type="radio"
+										name="payment-option"
+										value="work"
+									/>Work</label
+								>
+							</div>
+
+							<textarea
+								id="query"
+								name="query"
+								placeholder="Enter Query Here"
+								fixed
+							></textarea>
+
+							<button class="button-19" type="submit">Submit</button>
+						</form>
+					</div>
+				</div>
+			</div>
+			<!-- FORM END -->
+			<section>
+				<div class="text-card">
+					<img src="./images/contactLandscape.jpg" alt="" />
+				</div>
+			</section>
+		</main>
 		<!-- Footer -->
 		<footer>Travel Taniti © 2024. All rights reserved.</footer>
 		<script src="./script.js"></script>
