--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			</div>
 			<div id="myModal" class="modal">
 				<div class="modal-content">
-					<li><a href="#">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="discover.html">Discover Taniti</a></li>
 					<li><a href="plantrip.html">Plan Your Trip</a></li>
 					<li><a href="contact.html">Contact Us</a></li>
@@ -48,6 +48,7 @@
 				</div>
 			</section>
 			<!-- Introduction -->
+
 			<section>
 				<div class="text-card">
 					<h2 class="text-card-title">Welcome to Taniti</h2>
