finished inital design

--- a/contact.html
+++ b/contact.html
@@ -126,7 +126,7 @@
 								fixed
 							></textarea>
 
-							<button class="button-19" type="submit">Submit</button>
+							<button id="submitAlert" class="button-19" type="submit">Submit</button>
 						</form>
 					</div>
 				</div>
