--- a/plantrip.html
+++ b/plantrip.html
@@ -122,7 +122,7 @@
 								fixed
 							></textarea>
 
-							<button class="button-19" type="submit">Submit</button>
+							<button id="submitAlert" class="button-19" type="submit">Submit</button>
 						</form>
 					</div>
 				</div>
