updated via doc

--- a/contact.html
+++ b/contact.html
@@ -47,6 +47,15 @@
 						dedicated team is just a form away. Reach out to us using this simple
 						contact form for swift and personalized support to ensure your trip is
 						hassle-free and filled with only the best experiences Taniti has to offer.
+						<br />
+						<br />
+						Our service hours are:
+						<br />
+						Monday to Friday, 8:00 AM to 6:00 PM
+						<br />
+						Saturday from 9:00 AM to 1:00 PM
+						<br />
+						Taniti local time.
 					</p>
 				</div>
 			</section>
@@ -87,10 +96,10 @@
 								required
 							/>
 							<input
-								type="number"
+								type="tel"
 								id="phone"
 								name="phone"
-								placeholder="555-555-5555"
+								placeholder="Callback Phone Number"
 								required
 							/>
 
